--- a/css/timeline.css
+++ b/css/timeline.css
@@ -4,12 +4,12 @@
   padding: 0;
   display: grid;
   overflow: auto;
-  margin-top: 3.5rem;
   width: calc(100vw);
   --dev-highlight:  hsla(46, 93.8%, 63.7%);
   --beta-highlight:  hsla(137, 40%, 56.3%);
   --stable-highlight:  hsla(218, 91.7%, 65.3%);
   transform: translateX(-3.5rem);
+  height: calc(100vh - 7rem);
   /* grid-row-gap: 1rem; */
 }
 
