--- a/templates/includes/info.html
+++ b/templates/includes/info.html
@@ -1,4 +1,4 @@
-{% macro info(platforms) %}
+{% macro info(platforms, copy='') %}
 <style>
   #info-body {
     display: grid;
@@ -25,6 +25,7 @@
     width: calc(100vw - 5rem);
     border-radius: 0 0 0.5rem 0;
     box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    max-width: 80ch;
   }
 
   #info[data-open] {
@@ -71,6 +72,11 @@
     right: 0.5rem;
     border-radius: 50%;
   }
+
+  .info-body--desc {
+    grid-column: 1 / -1;
+    max-width: 80ch;
+  }
 </style>
 <aside id="info">
   <button id="info-toggle" aria-label="Open info">
@@ -80,6 +86,7 @@
     </svg>
   </button>
   <div id="info-body">
+    <div class="info-body--desc">{{copy | md | safe}}</div>
     <table class="card--table">
       <caption>
         Icons
