--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,13 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <style>
+    h1 {
+      font-family: 'Roboto';
+      font-size: 3rem;
+      font-weight: 400;
+      text-align: center;
+    }
+
     .cards {
       /* display: grid; */
       list-style: none;
@@ -294,7 +301,7 @@
 
     .releases {
       list-style: none;
-      margin: 0;
+      margin: 0 auto;
       padding: 0;
       display: flex;
       width: 100%;
@@ -417,13 +424,9 @@
 
     <header class="site-header">
       <h1>Fugu API Tracker</h1>
-      <p>The <a href="https://developers.google.com/web/updates/capabilities">capabilities project</a>, also known as Project Fugu, is a cross-company effort to make it possible for web apps to do anything iOS, Android, or desktop apps can, by exposing the capabilities of these platforms to the web while maintaining user security, privacy, trust, and other core tenets of the web.</p>
-      <p>If you'd like to work with this data programmatically, you can <a href="/js/data.json">download it</a> (approx. {{dataSize}}KB)</p>
-
-      <p>This view shows all of the APIs being considered. To see just the APIs that are available to test with or use in the order they became available, swap to our <a href="/timeline">timeline view</a>. A large screen is recommended.</p>
     </header>
 
-    {{filter(platforms, versions)}} {{info(platforms)}}
+    {{filter(platforms, versions)}} {{info(platforms, intros.main)}}
 
     <ol class="releases">
       <li class="release release__stable">
