--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,24 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <style>
+    #view-toggle {
+      background: rgb(250, 250, 250);
+      border: 0;
+      padding: 0;
+      height: 2.5rem;
+      width: 2.5rem;
+      padding: 0.5rem;
+      cursor: pointer;
+      align-self: flex-end;
+      border-radius: 0 0.5rem 0.5rem 0;
+      box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+      position: relative;
+      position: fixed;
+      top: 5rem;
+      left: 0;
+      z-index: 5;
+    }
+
     h1 {
       font-family: 'Roboto';
       font-size: 3rem;
@@ -427,6 +445,13 @@
     </header>
 
     {{filter(platforms, versions)}} {{info(platforms, intros.main)}}
+
+    <a href="/timeline" id="view-toggle" aria-label="Swap to timeline view">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M0 0h24v24H0z" fill="none" />
+        <path d="M21 4H3c-.55 0-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-8 2h2.5v12H13V6zm-2 12H8.5V6H11v12zM4 6h2.5v12H4V6zm16 12h-2.5V6H20v12z" />
+      </svg>
+    </a>
 
     <ol class="releases">
       <li class="release release__stable">
