--- a/views/index.html
+++ b/views/index.html
@@ -1,506 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fugu API Tracker</title>
-    <link rel="stylesheet" href="/css/header.css" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
-  </head>
-  <style>
-    #view-toggle {
-      background: rgb(250, 250, 250);
-      border: 0;
-      padding: 0;
-      height: 2.5rem;
-      width: 2.5rem;
-      padding: 0.5rem;
-      cursor: pointer;
-      align-self: flex-end;
-      border-radius: 0 0.5rem 0.5rem 0;
-      box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-      position: relative;
-      position: fixed;
-      top: 5rem;
-      left: 0;
-      z-index: 5;
-    }
-
-    h1 {
-      font-family: 'Roboto';
-      font-size: 3rem;
-      font-weight: 400;
-      text-align: center;
-    }
-
-    .cards {
-      /* display: grid; */
-      list-style: none;
-      margin: 0;
-      padding: 2rem 0;
-    }
-
-    section > h2 {
-      margin: 0;
-      padding: 0.5rem 0;
-      position: sticky;
-      top: 0;
-      left: 0;
-      background: white;
-      z-index: 10;
-    }
-
-    section {
-      padding: 1rem 0;
-      background: white;
-      position: relative;
-    }
-
-    section:first-of-type {
-      padding-top: 0;
-      margin-top: 1rem;
-    }
-
-    .hidden {
-      display: none !important;
-    }
-
-    .card {
-      font-family: Roboto, sans-serif;
-      box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12);
-      display: grid;
-      border: 1px solid #e8eaed;
-      border-radius: 4px;
-      padding: 1rem;
-      height: max-content;
-      overflow: hidden;
-      grid-gap: 0.5rem;
-    }
-
-    .card:not(.hidden):nth-of-type(even) {
-      background-color: rgb(243, 244, 246);
-      border-color: rgb(209, 213, 219);
-    }
-
-    .card:not(.hidden):nth-of-type(even) .card--table thead,
-    .card:not(.hidden):nth-of-type(even) .card--table tr:nth-of-type(even) {
-      background-color: white;
-    }
-
-    .card--tables {
-      display: grid;
-      grid-gap: 1rem;
-    }
-
-    @media (min-width: 475px) {
-      .card--tables {
-        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        max-width: 900px;
-      }
-
-      .table--implementation {
-        grid-column: 2 / span 1;
-      }
-    }
-
-    .card--header {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1rem;
-      align-items: flex-start;
-      grid-gap: 1rem;
-    }
-
-    @media (min-width: 745px) {
-      .card--header {
-        grid-template-columns: 2.5fr 1fr 1fr 1rem;
-      }
-    }
-
-    .card--title {
-      font-size: 1.25em;
-      line-height: 1.4;
-      font-weight: 300;
-      letter-spacing: 0.0125em;
-      margin: 0;
-      padding: 0;
-      grid-column: 1 / span 3;
-      word-break: break-word;
-    }
-
-    .card--available {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, 1.5em);
-      grid-gap: 0.5rem;
-      align-items: center;
-      /* margin-top: 0.75rem; */
-      grid-column: 2 / span 1;
-    }
-
-    .pills {
-      display: flex;
-      flex-wrap: wrap;
-      margin: -0.25rem -0.25rem;
-      /* margin-top: 0.75rem; */
-      grid-column: 1 / span 1;
-    }
-
-    .card--more:not(.card--title) {
-      display: flex;
-      cursor: pointer;
-      color: #6200ee;
-      margin: 0;
-      font-weight: 500;
-      align-items: center;
-      justify-content: center;
-      border: 0;
-      background: none;
-      padding: 0;
-      align-self: center;
-      grid-column: 3 / span 1;
-    }
-
-    .card--more.card--title {
-      padding: 0;
-      margin: 0;
-      background: none;
-      border: 0;
-      text-align: left;
-      font-size: 1em;
-      cursor: pointer;
-    }
-
-    @media (min-width: 745px) {
-      .card--title {
-        grid-column: 1 / span 1;
-      }
-      .card--available {
-        grid-column: 3 / span 1;
-      }
-
-      .pills {
-        grid-column: 2 / span 1;
-      }
-
-      .card--more:not(.card--title) {
-        grid-column: -2 / span 1;
-      }
-    }
-
-    .card--body {
-      line-height: 1.4;
-      font-weight: 300;
-      letter-spacing: 0.0178571429em;
-      display: none;
-    }
-
-    .card--body[data-open] {
-      display: block;
-    }
-
-    .card--details {
-      grid-column: 1 / span 3;
-    }
-
-    .card--more:not(.card--title)[data-open] .card--more-icon {
-      transform: rotate(45deg);
-    }
-
-    .card--more-icon {
-      height: 1rem;
-      width: 1rem;
-      fill: currentColor;
-    }
-
-    .card--summary {
-      opacity: 0.6;
-      margin: 0;
-      margin-top: 1rem;
-      grid-column: 1 / span 1;
-    }
-
-    @media (min-width: 900px) {
-      .card--with-summary {
-        display: grid;
-        grid-template-columns: min(calc(100% - (600px + 2rem)), 80ch) minmax(calc(600px + 1rem), 1fr);
-        grid-gap: 1rem;
-      }
-
-      .card--with-summary .card--tables {
-        grid-column: 2 / span 1;
-      }
-    }
-
-    .card--location {
-      width: 1.5em;
-      height: auto;
-    }
-
-    .card--location__big {
-      width: 2.5em;
-    }
-
-    /* .card--more::after {
-      content: '+';
-      display: inline-block;
-      margin-left: 0.25rem;
-    }
-
-    [open] > .card--more::after {
-      transform: rotate(45deg);
-    } */
-
-    .card--more::-webkit-details-marker {
-      display: none;
-    }
-
-    .card--table {
-      width: 100%;
-      max-width: 400px;
-      border: 1px solid #e8eaed;
-      margin-top: 1rem;
-      justify-self: center;
-    }
-
-    .card--table tr:nth-of-type(even),
-    .card--table thead {
-      background-color: #e8eaed;
-    }
-
-    .card--table td {
-      border: 0;
-    }
-
-    .card--resources {
-      grid-column: 1 / -1;
-      display: grid;
-      grid-gap: 1rem;
-    }
-
-    .card--resources h3 {
-      font-size: 1.15em;
-      line-height: 1.4;
-      font-weight: 300;
-      letter-spacing: 0.0125em;
-      margin: 0;
-      padding: 0;
-      word-break: break-word;
-    }
-
-    .card--resources ul {
-      margin: 0;
-      padding-inline-start: 1rem;
-    }
-
-    @media (min-width: 700px) {
-      .card--resources {
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-
-    .pill {
-      margin: 0.25rem 0.25rem;
-      padding: 0 0.75em;
-      background-color: #e8eaed;
-      border-radius: 1em;
-      font-size: 0.875em;
-    }
-
-    .pill--shipped {
-      background-color: #aecbfa;
-    }
-
-    .pill--dev {
-      background-color: #fde293;
-    }
-
-    .pill--ot {
-      background-color: #a8dab5;
-    }
-
-    .releases {
-      list-style: none;
-      margin: 0 auto;
-      padding: 0;
-      display: flex;
-      width: 100%;
-      /* margin-left: -1rem; */
-      justify-content: center;
-      flex-wrap: wrap;
-      max-width: 100ch;
-      /* background: white; */
-      position: relative;
-    }
-
-    .release {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 1rem;
-      background-color: white;
-      padding: 0.5rem;
-      border-radius: 4px;
-    }
-
-    .release--type,
-    .release--date {
-      margin: 0;
-      /* font-weight: bold; */
-      opacity: 1;
-    }
-
-    .release--type {
-      text-transform: uppercase;
-      margin-bottom: 0.5rem;
-    }
-
-    .release--title {
-      font-size: 2.5rem;
-      display: flex;
-      flex-wrap: nowrap;
-      align-items: center;
-      margin: 0;
-      font-weight: 300;
-    }
-
-    .release--date {
-      margin-top: 1rem;
-      text-align: center;
-    }
-
-    .release img {
-      height: 1em;
-      margin-right: 0.5rem;
-    }
-
-    .copy {
-      border: 0;
-      background: none;
-      padding: 0;
-      margin: 0;
-      margin-left: 0.5rem;
-      font-size: 1em;
-      cursor: pointer;
-    }
-
-    .copy svg {
-      height: 1em;
-    }
-  </style>
-  <script type="module">
-    function toggleDetails(e) {
-      e.preventDefault();
-      const target = e.target.closest('.card--more');
-      const details = e.target.closest('.card').querySelector('.card--body');
-      const info = e.target.closest('.card').querySelector('.card--more:not(.card--title)');
-
-      if (info.dataset.open) {
-        delete info.dataset.open;
-        delete details.dataset.open;
-      } else {
-        info.dataset.open = true;
-        details.dataset.open = true;
-      }
-    }
-
-    function copyURL(e) {
-      const target = e.target.closest('.copy');
-      const url = target.dataset.url;
-      const temp = document.createElement('input');
-      document.body.appendChild(temp);
-      temp.value = url;
-      temp.select();
-      document.execCommand('copy');
-      temp.parentNode.removeChild(temp);
-    }
-
-    window.addEventListener('DOMContentLoaded', () => {
-      for (const copy of document.querySelectorAll('.copy')) {
-        copy.addEventListener('click', copyURL);
-      }
-
-      const cards = [...document.querySelectorAll('.card')].map((elem) => {
-        const card = {
-          elem,
-          title: elem.dataset.title,
-          shipping: JSON.parse(elem.dataset.shipping),
-          desc: elem.querySelector('.card--summary') ? elem.querySelector('.card--summary').textContent : '',
-          status: elem.dataset.type,
-          bug: elem.dataset.bug,
-          where: JSON.parse(elem.dataset.where),
-          pwa: elem.dataset.pwa === 'true',
-        };
-
-        elem.querySelectorAll('.card--more').forEach((el) => el.addEventListener('click', toggleDetails));
-
-        return card;
-      });
-      window.cards = cards;
-    });
-  </script>
-  <body>
-    {% from 'card.html' import card %} {% from 'filters.html' import filter %} {% from 'info.html' import info %}
-
-    <header class="site-header">
-      <h1>Fugu API Tracker</h1>
-    </header>
-
-    {{filter(platforms, versions)}} {{info(platforms, intros.main)}}
-
-    <a href="/timeline" id="view-toggle" aria-label="Swap to timeline view">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M0 0h24v24H0z" fill="none" />
-        <path d="M21 4H3c-.55 0-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-8 2h2.5v12H13V6zm-2 12H8.5V6H11v12zM4 6h2.5v12H4V6zm16 12h-2.5V6H20v12z" />
-      </svg>
-    </a>
-
-    <ol class="releases">
-      <li class="release release__stable">
-        <p class="release--type">Stable</p>
-        <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo.svg" alt="" />Chrome {{versions.stable}}</h3>
-        {% for r in releases %} {% if r.release == versions.stable %}
-        <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
-        {% endif %} {% endfor %}
-      </li>
-      <li class="release">
-        <p class="release--type">Beta</p>
-        <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_beta.svg" alt="" />Chrome {{versions.beta}}</h3>
-        {% for r in releases %} {% if r.release == versions.beta %}
-        <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
-        {% endif %} {% endfor %}
-      </li>
-      <li class="release">
-        <p class="release--type">Dev</p>
-        <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_dev.svg" alt="" />Chrome {{versions.dev}}</h3>
-        {% for r in releases %} {% if r.release == versions.dev %}
-        <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
-        {% endif %} {% endfor %}
-      </li>
-    </ol>
-
-    {% for type, items in apis %} {% if items.length %}
-    <section>
-      <h2>{{sections[type] | safe}}</h2>
-      <ul class="cards">
-        {% for api in items %} {{card(api, type | lower)}} {% endfor %}
-      </ul>
-    </section>
+---
+title: Fugu API Tracker
+layout: wrapper.html
+view: list
+---
+
+<link rel="stylesheet" href="/css/list.css" />
+{% from 'card.html' import card %}
+
+<a href="/timeline" id="view-toggle" aria-label="Swap to timeline view">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path d="M0 0h24v24H0z" fill="none" />
+    <path d="M21 4H3c-.55 0-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-8 2h2.5v12H13V6zm-2 12H8.5V6H11v12zM4 6h2.5v12H4V6zm16 12h-2.5V6H20v12z" />
+  </svg>
+</a>
+
+<ol class="releases">
+  <li class="release release__stable">
+    <p class="release--type">Stable</p>
+    <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo.svg" alt="" />Chrome {{versions.stable}}</h3>
+    {% for r in releases %} {% if r.release == versions.stable %}
+    <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
     {% endif %} {% endfor %}
-    <script type="module">
-      window.addEventListener('DOMContentLoaded', () => {
-        document.querySelectorAll('.release--date').forEach((r) => {
-          const d = new Date(r.dataset.date);
-          const today = new Date();
-          const diff = Math.ceil((d - today) / (1000 * 60 * 60 * 24));
-          const short = d.toLocaleDateString('en-us', { year: 'numeric', month: 'short', day: 'numeric' });
-          console.log(short);
+  </li>
+  <li class="release">
+    <p class="release--type">Beta</p>
+    <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_beta.svg" alt="" />Chrome {{versions.beta}}</h3>
+    {% for r in releases %} {% if r.release == versions.beta %}
+    <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
+    {% endif %} {% endfor %}
+  </li>
+  <li class="release">
+    <p class="release--type">Dev</p>
+    <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_dev.svg" alt="" />Chrome {{versions.dev}}</h3>
+    {% for r in releases %} {% if r.release == versions.dev %}
+    <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
+    {% endif %} {% endfor %}
+  </li>
+</ol>
 
-          if (diff < 0) {
-            r.innerHTML = `Stable: ${Math.abs(diff)} days ago <br/>(${short})`;
-          } else {
-            r.innerHTML = `Stable: ${diff} days <br/>(${short})`;
-          }
-        });
-      });
-    </script>
-  </body>
-</html>
+{% for type, items in apis %} {% if items.length %}
+<section>
+  <h2>{{sections[type] | safe}}</h2>
+  <ul class="cards">
+    {% for api in items %} {{card(api, type | lower)}} {% endfor %}
+  </ul>
+</section>
+{% endif %} {% endfor %}
