--- a/src/css/components/_core.scss
+++ b/src/css/components/_core.scss
@@ -14,7 +14,7 @@ body {
 }
 
 h1 {
-  font-family: 'Roboto';
+  font-family: Roboto, sans-serif;
   font-size: 3rem;
   font-weight: 400;
   text-align: center;
