Replace Chrome with Chromium
Reflects that these APIs ship in Chromium, not just Chrome, and that there are other contributors and vendors who may pull in from Chromium.

Resolves #8

--- a/src/css/global/_colors.scss
+++ b/src/css/global/_colors.scss
@@ -4,6 +4,9 @@ $colors: (
   'light-blue': #aecbfa,
   'light-yellow': #fde293,
   'light-green': #a8dab5,
+  'chromium-light-blue': #a1c2fa,
+  'chromium-medium-blue': #3367d6,
+  'chromium-dark-blue': #1a237e,
 );
 
 :root {
