--- a/views/index.html
+++ b/views/index.html
@@ -26,28 +26,36 @@ view: list
 <a href="/timeline" id="view-toggle" aria-label="Swap to timeline view">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
     <path d="M0 0h24v24H0z" fill="none" />
-    <path d="M21 4H3c-.55 0-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-8 2h2.5v12H13V6zm-2 12H8.5V6H11v12zM4 6h2.5v12H4V6zm16 12h-2.5V6H20v12z" />
+    <path
+      d="M21 4H3c-.55 0-1 .45-1 1v14c0 .55.45 1 1 1h18c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-8 2h2.5v12H13V6zm-2 12H8.5V6H11v12zM4 6h2.5v12H4V6zm16 12h-2.5V6H20v12z"
+    />
   </svg>
 </a>
 
 <ol class="releases" role="list">
   <li class="release release__stable">
     <p class="release--type">Stable</p>
-    <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo.svg" alt="" />Chrome {{versions.stable}}</h3>
+    <h3 class="release--title">
+      <img src="/images/chromium.svg" alt="" />Chromium {{versions.stable}}
+    </h3>
     {% for r in releases %} {% if r.release == versions.stable %}
     <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
     {% endif %} {% endfor %}
   </li>
   <li class="release">
     <p class="release--type">Beta</p>
-    <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_beta.svg" alt="" />Chrome {{versions.beta}}</h3>
+    <h3 class="release--title">
+      <img src="/images/chromium_beta.svg" alt="" />Chromium {{versions.beta}}
+    </h3>
     {% for r in releases %} {% if r.release == versions.beta %}
     <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
     {% endif %} {% endfor %}
   </li>
   <li class="release">
     <p class="release--type">Dev</p>
-    <h3 class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_dev.svg" alt="" />Chrome {{versions.dev}}</h3>
+    <h3 class="release--title">
+      <img src="/images/chromium_dev.svg" alt="" />Chromium {{versions.dev}}
+    </h3>
     {% for r in releases %} {% if r.release == versions.dev %}
     <p class="release--date" data-date="{{r.date}}">Stable: {{r.date | date }}</p>
     {% endif %} {% endfor %}
