--- a/views/timeline.html
+++ b/views/timeline.html
@@ -37,30 +37,44 @@ view: timeline
 <div class="timeline-wrapper">
   <ul id="timeline" class="timeline timeline-grid timeline-grid--background" role="list">
     <li class="timeline-grid timeline-header">
-      {% for r in releases %} {% set classes = 'release' %} {% if r.release == versions.stable %} {% set classes = 'release release--stable' %} {% elseif r.release == versions.beta %} {% set classes = 'release release--beta' %} {% elseif r.release == versions.dev %} {% set classes = 'release release--dev' %} {% endif %}
+      {% for r in releases %} {% set classes = 'release' %} {% if r.release == versions.stable %} {%
+      set classes = 'release release--stable' %} {% elseif r.release == versions.beta %} {% set
+      classes = 'release release--beta' %} {% elseif r.release == versions.dev %} {% set classes =
+      'release release--dev' %} {% endif %}
 
       <div class="{{classes}}">
         {% if r.release == versions.stable %}
         <p class="release--type">Stable</p>
-        <p class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo.svg" alt="" />Chrome {{r.release}}</p>
+        <p class="release--title">
+          <img src="/images/chromium.svg" alt="" />Chromium {{r.release}}
+        </p>
         {% elseif r.release == versions.beta %}
         <p class="release--type">Beta</p>
-        <p class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_beta.svg" alt="" />Chrome {{r.release}}</p>
+        <p class="release--title">
+          <img src="/images/chromium_beta.svg" alt="" />Chromium {{r.release}}
+        </p>
         {% elseif r.release == versions.dev %}
         <p class="release--type">Dev</p>
-        <p class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_dev.svg" alt="" />Chrome {{r.release}}</p>
+        <p class="release--title">
+          <img src="/images/chromium_dev.svg" alt="" />Chromium {{r.release}}
+        </p>
         {% elseif r.release > versions.dev %}
         <p class="release--type"></p>
-        <p class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo_dev.svg" alt="" />Chrome {{r.release}}</p>
+        <p class="release--title">
+          <img src="/images/chromium_dev.svg" alt="" />Chromium {{r.release}}
+        </p>
         {% else %}
         <p class="release--type"></p>
-        <p class="release--title"><img src="https://chromestatus.com/static/img/chrome_logo.svg" alt="" />Chrome {{r.release}}</p>
+        <p class="release--title">
+          <img src="/images/chromium.svg" alt="" />Chromium {{r.release}}
+        </p>
         {% endif %}
         <p class="release--date" data-date="{{r.date}}">{{r.date | date }}</p>
       </div>
       {% endfor %}
     </li>
-    {% for api in apis | timelineRows %} {{ timelineCard(api, releases, versions, loop)}} {% endfor %}
+    {% for api in apis | timelineRows %} {{ timelineCard(api, releases, versions, loop)}} {% endfor
+    %}
   </ul>
 </div>
 
