--- a/src/css/components/_core.scss
+++ b/src/css/components/_core.scss
@@ -48,7 +48,8 @@ h1 {
   cursor: pointer;
   align-self: flex-end;
   border-radius: 0 0.5rem 0.5rem 0;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   position: relative;
   position: fixed;
   top: 5rem;
