--- a/src/css/components/_filter.scss
+++ b/src/css/components/_filter.scss
@@ -43,7 +43,8 @@
     background-color: #6200ee;
     border-radius: 4px;
     border: 0;
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+      0px 1px 5px 0px rgba(0, 0, 0, 0.12);
     color: #fff;
     cursor: pointer;
     display: inline-flex;
