--- a/src/css/components/_flyout.scss
+++ b/src/css/components/_flyout.scss
@@ -9,7 +9,8 @@
   display: flex;
   flex-direction: column;
   border-radius: 0 0 0.5rem 0;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 
   &[data-open] {
     transform: translateX(0);
@@ -26,7 +27,8 @@
     align-self: flex-end;
     transform: translateX(2.5rem);
     border-radius: 0 0.5rem 0.5rem 0;
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+      0px 1px 5px 0px rgba(0, 0, 0, 0.12);
     position: relative;
 
     &::before {
