Change Chrome to Chromium
Missed in the initial change

--- a/templates/includes/info.html
+++ b/templates/includes/info.html
@@ -37,7 +37,7 @@
       <tbody>
         <tr>
           <td>🐡</td>
-          <td>Shipped, or expecting to ship, in Chrome</td>
+          <td>Shipped, or expecting to ship, in Chromium</td>
         </tr>
         <tr>
           <td>🔮</td>
